--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,25 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+  /* Primary Colors (shared between light and dark) */
+  --color-primary-main: #0da81d;
+  --color-primary-light: #0b8b18;
+  --color-primary-dark: #064f0d;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  /* Secondary Colors (shared between light and dark) */
+  --color-secondary-main: #2e38ff;
+  --color-secondary-light: #9ef3f3;
+  --color-secondary-dark: #022445;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+  /* Text Colors (shared between light and dark) */
+  --color-text-secondary: #ffffff;
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+  /* Font Weight */
+  --weight-text-light: 300;
+  --weight-text-regular: 400;
+  --weight-text-normal: 500;
+  --weight-text-bold: 700;
+
+  /* Padding */
+  --padding-page: 1.25rem 0.938rem;
 }
 
 * {
@@ -38,23 +41,24 @@ h1 {
   line-height: 1.1;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+/* Dark Mode Specific */
+body[data-theme="dark"] {
+  /* Background Colors */
+  --color-background-default: #131a14;
+  --color-background-paper: #111712;
+
+  /* Text Colors */
+  --color-text-primary: #ffffff;
 }
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+
+/* Light Mode Specific */
+body[data-theme="light"] {
+  /* Background Colors */
+  --color-background-default: #ffffff;
+  --color-background-paper: #111712;
+
+  /* Text Colors */
+  --color-text-primary: #131a14;
 }
 
 @media (prefers-color-scheme: light) {
