style(refactor): change css properties to index file

--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,10 @@ body {
   color: var(--color-text-primary);
   overflow-x: hidden;
 }
+
+#root {
+  width: 100%;
+}
 }
 
 /* Dark Mode Specific */
