style: change font to Sora

--- a/src/components/HeadingText/index.css
+++ b/src/components/HeadingText/index.css
@@ -1,4 +1,6 @@
+.MuiTypography-h1 {
+  font-family: "Sora", sans-serif;
+}
 .heading-text {
-  font-family: "Poppins", sans-serif;
   font-weight: var(--weight-text-bold) !important;
 }
