--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,10 @@
 
   /* Padding */
   --padding-page: 1.25rem 0.938rem;
+
+  /* Gradient */
+  --main-gradient: 45deg, var(--color-primary-main) 0%,
+    var(--color-secondary-main) 50%;
 }
 
 * {
@@ -43,11 +47,7 @@ body {
 
 .gradient-text {
   background: var(--color-primary-main);
-  background-image: -webkit-linear-gradient(
-    45deg,
-    var(--color-primary-main) 0%,
-    var(--color-secondary-main) 50%
-  );
+  background-image: -webkit-linear-gradient(var(--main-gradient));
 
   background-size: 100%;
   background-repeat: repeat;
