--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,11 @@ body {
   width: 100%;
 }
 
+a{
+  color: inherit;
+  text-decoration: none;
+}
+
 .gradient-text {
   background: var(--color-primary-main);
   background-image: -webkit-linear-gradient(var(--main-gradient));
@@ -86,7 +91,14 @@ body {
   }
 }
 
-a{
-  color: inherit;
-  text-decoration: none;
+@media screen and (min-width: 1920px) {
+  :root {
+    --padding-page: 1.25rem 12rem;
+  }
+}
+
+@media screen and (min-width: 2560px) {
+  :root {
+    --padding-page: 1.25rem 20rem;
+  }
 }
