--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -18,6 +18,14 @@
     --weight-text-normal: 500;
     --weight-text-bold: 700;
 
+    /* Heading Font Size */
+    --font-size-h1: clamp(1.5rem, 1.2rem + 2vw, 3rem);
+    --font-size-h2: clamp(1.4rem, 1.1rem + 1.8vw, 2.5rem);
+    --font-size-h3: clamp(1.3rem, 1rem + 1.6vw, 2.2rem);
+    --font-size-h4: clamp(1.2rem, 0.9rem + 1.4vw, 1.8rem);
+    --font-size-h5: clamp(1.1rem, 0.8rem + 1.2vw, 1.5rem);
+    --font-size-h6: clamp(1rem, 0.7rem + 1vw, 1.2rem);
+
     /* Padding */
     --padding-page: 1.25rem 0.938rem;
 
@@ -34,6 +42,12 @@
 @media screen and (min-width: 768px) {
     :root {
         --padding-page: 1.25rem 2.5rem;
+        --font-size-h1: clamp(2rem, 1.5rem + 2vw, 3.5rem);
+        --font-size-h2: clamp(1.8rem, 1.4rem + 1.8vw, 3rem);
+        --font-size-h3: clamp(1.6rem, 1.3rem + 1.6vw, 2.5rem);
+        --font-size-h4: clamp(1.4rem, 1.2rem + 1.4vw, 2rem);
+        --font-size-h5: clamp(1.2rem, 1rem + 1.2vw, 1.8rem);
+        --font-size-h6: clamp(1rem, 0.9rem + 1vw, 1.5rem);
     }
 }
 
