--- a/src/components/typografy/HeadingText/index.css
+++ b/src/components/typografy/HeadingText/index.css
@@ -1,28 +1,28 @@
-.MuiTypography-root{
+.LibTypography-root{
   font-family: "Sora", sans-serif;
 }
 
-.MuiTypography-h1 {
+.LibTypography-h1 {
   font-size: var(--font-size-h1) !important;
 }
 
-.MuiTypography-h2 {
+.LibTypography-h2 {
   font-size: var(--font-size-h2) !important;
 }
 
-.MuiTypography-h3 {
+.LibTypography-h3 {
   font-size: var(--font-size-h3) !important;
 }
 
-.MuiTypography-h4 {
+.LibTypography-h4 {
   font-size: var(--font-size-h4) !important;
 }
 
-.MuiTypography-h5 {
+.LibTypography-h5 {
   font-size: var(--font-size-h5) !important;
 }
 
-.MuiTypography-h6 {
+.LibTypography-h6 {
   font-size: var(--font-size-h6) !important;
 }
 
